--- a/sliderule_dsi_json_exercise.ipynb
+++ b/sliderule_dsi_json_exercise.ipynb
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
        "[2 rows x 50 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1054,7 @@
        "[5 rows x 50 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1066,16 +1066,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
+   "execution_count": 149,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "Manish_wb=Manish_wb.groupby('countryshortname')[['id']].count()"
+    "Manish_wb=Manish_wb.groupby('countryshortname')[['_id']].count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>_id</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>countryshortname</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Afghanistan</th>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Africa</th>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Albania</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Angola</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Antigua and Barbuda</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     _id\n",
+       "countryshortname        \n",
+       "Afghanistan            6\n",
+       "Africa                11\n",
+       "Albania                4\n",
+       "Angola                 1\n",
+       "Antigua and Barbuda    1"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Manish_wb.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
    "metadata": {
     "scrolled": true
    },
@@ -1084,26 +1163,26 @@
      "data": {
       "text/plain": [
        "countryshortname\n",
-       "Zimbabwe                   1\n",
-       "Honduras                   1\n",
-       "Djibouti                   1\n",
-       "East Asia and Pacific      1\n",
-       "Ecuador                    1\n",
-       "Egypt, Arab Republic of    1\n",
-       "Ethiopia                   1\n",
-       "Europe and Central Asia    1\n",
-       "Gambia, The                1\n",
-       "Georgia                    1\n",
-       "Name: id, dtype: int64"
+       "Indonesia             19\n",
+       "China                 19\n",
+       "Vietnam               17\n",
+       "India                 16\n",
+       "Yemen, Republic of    13\n",
+       "Nepal                 12\n",
+       "Bangladesh            12\n",
+       "Morocco               12\n",
+       "Mozambique            11\n",
+       "Africa                11\n",
+       "Name: _id, dtype: int64"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Manish_wb.id.sort_values(ascending=False).head(10)"
+    "Manish_wb._id.sort_values(ascending=False).head(10)"
    ]
   },
   {
@@ -1115,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 127,
    "metadata": {
     "collapsed": true
    },
@@ -1126,8 +1205,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
+   "execution_count": 128,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Manish_wb1=json_normalize(Manish_wb1,['mjtheme_namecode'])"
@@ -1135,8 +1216,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
+   "execution_count": 129,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Manish_wb2=Manish_wb1.groupby(['code'])['code'].count()"
@@ -1144,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1248,7 @@
        "Name: code, dtype: int64"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1176,8 +1259,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
+   "execution_count": 131,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Manish_wb3=Manish_wb1.groupby([\"code\", \"name\"]).size().reset_index()"
@@ -1185,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -1377,7 +1462,7 @@
        "21    9                             Urban development   47"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1388,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1493,7 @@
        "Name: code, dtype: int64"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1427,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 134,
    "metadata": {
     "collapsed": true
    },
@@ -1438,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 135,
    "metadata": {
     "scrolled": true
    },
@@ -1632,7 +1717,7 @@
        "21    9                             Urban development     47"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1643,8 +1728,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
+   "execution_count": 136,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Manish_wb5=Manish_wb4.replace('', np.NaN)\n",
@@ -1653,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -1845,7 +1932,7 @@
        "21    9                             Urban development     47"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1856,8 +1943,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
+   "execution_count": 138,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Manish_wb5=Manish_wb5.groupby([\"code\",\"name\"])['total'].sum()"
@@ -1865,8 +1954,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
+   "execution_count": 139,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Manish_wb5 = Manish_wb5.to_frame()\n"
@@ -1874,7 +1965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -1983,7 +2074,7 @@
        "9    Urban development                                50"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1994,7 +2085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -2103,7 +2194,7 @@
        "3    Rule of law                                      15"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2111,24 +2202,6 @@
    "source": [
     "Manish_wb5.sort_values([\"total\"],ascending=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
